# better-mealie-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TOOLS.md  VERSIONS.md  fastmcp-http.json  fastmcp.json  naming.py  openapi.json  pyproject.toml  server.py  setup-wizard.html
.github/: renovate.json5
.github/workflows/: pages.yml  publish.yml  release-on-spec.yml  update-spec.yml
better_mealie_mcp/: __init__.py  naming.py  server.py
scripts/: gen_tools.py  set_version.py  spec_diff.py
