[project]
name = "better-mealie-mcp"
version = "3.21.0"   # mirrors the targeted Mealie version (see MEALIE_VERSION)
description = "MCP server exposing every Mealie API endpoint via FastMCP"
readme = "README.md"
authors = [{ name = "Marcos Pérez" }]
requires-python = ">=3.14"
keywords = ["mcp", "mealie", "fastmcp", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "fastmcp>=2.10",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/djwmarcx/better-mealie-mcp"
"Setup Wizard" = "https://djwmarcx.github.io/better-mealie-mcp/"
Releases = "https://github.com/djwmarcx/better-mealie-mcp/releases"

[project.scripts]
better-mealie-mcp = "better_mealie_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["better_mealie_mcp"]

# The spec files live at the repo root (where CI and the scripts/ tooling
# maintain them); ship copies inside the package so the installed wheel is
# self-contained. better_mealie_mcp._data_path() checks the package dir first.
[tool.hatch.build.targets.wheel.force-include]
"openapi.json" = "better_mealie_mcp/openapi.json"
"MEALIE_VERSION" = "better_mealie_mcp/MEALIE_VERSION"
